--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "apexcharts": "^2.1.5",
     "axios": "^0.18.0",
     "bootstrap": "^4.0.0-beta.2",
     "bootstrap-vue": "^2.0.0-rc.11",
@@ -21,6 +22,7 @@
     "google-maps": "^3.2.1",
     "v-tooltip": "^2.0.0-rc.1",
     "vue": "^2.5.2",
+    "vue-apexcharts": "^1.2.2",
     "vue-axios": "^2.1.4",
     "vue-clickaway": "^2.1.0",
     "vue-notifyjs": "^0.2.0",
