--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vue-apexcharts": "^1.2.2",
     "vue-axios": "^2.1.4",
     "vue-clickaway": "^2.1.0",
+    "vue-js-modal": "^1.3.27",
     "vue-notifyjs": "^0.2.0",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.4"
